--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: codinglog
+subtitle: "코딩일기"
+email: thefuturecreator@gmail.com
+name: Jeongjin Kim
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  안녕하세요. 코딩 로그입니다.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -41,10 +41,10 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-# disqus_shortname: bencentra
+disqus_shortname: codinglog
 
 # Google analytics
-# ga_tracking_id: "UA-XXXX-1"
+ga_tracking_id: "UUA-42722662-1"
 
 # Category descriptions (for archive pages)
 descriptions:
